force-app/main/default/objects/ApplicationLog__c/ApplicationLog__c.object-meta.xml
<CustomObject>
    <description>The object for storing customized log created from Apex Code</description>
    <label>Application Log</label>
    <nameField>
        <label>Application Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>