force-app/main/default/objects/ApplicationLog__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of this record is from TODAY() - Created Date</description>
    <formula>TODAY() -   DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>