force-app/main/default/objects/ApplicationLog__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The Apex Class name that originated this Application Log</description>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>