force-app/main/default/objects/ApplicationLog__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <description>The Created Date/Time of an Application Log</description>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>