force-app/main/default/objects/ApplicationLog__c/fields/DebugLevel__c.field-meta.xml
<CustomField>
    <fullName>DebugLevel__c</fullName>
    <description>Debug Level of the Application Log which could be:
Info - logged for additional information
Debug - logged for debug purpose
Warning - logged to capture problem in the system but is not regarded as an error
Error - logged to capture problem in the system but is regarded as an error

The Debug Level is controlled by a custom setting to dictate which Debug Level will be logged.</description>
    <label>Debug Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>