force-app/main/default/objects/ApplicationLog__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The target endpoint of a web service log</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>