force-app/main/default/objects/ApplicationLog__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <description>The exception message captured by a system exception caught in Apex Code</description>
    <label>Exception Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>