force-app/main/default/objects/ApplicationLog__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>The originating function in the class (e.g. UpdateDivision() )</description>
    <label>Function</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>