force-app/main/default/objects/ApplicationLog__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <description>The related record id(s)</description>
    <label>Reference Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>