force-app/main/default/objects/ApplicationLog__c/fields/ReferenceInformation__c.field-meta.xml
<CustomField>
    <fullName>ReferenceInformation__c</fullName>
    <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
    <label>Reference Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>