force-app/main/default/objects/ApplicationLog__c/fields/SendEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>SendEmailAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is checked, an email alert will be sent to the corresponding recipients according to the Workflow setup.</description>
    <label>Send Email Alert</label>
    <type>Checkbox</type>
</CustomField>